<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/actionYieldTracker"
            android:enabled="true"
            android:icon="@drawable/icons8_plus_50"
            android:title="@string/bottomYieldTracker"
            app:showAsAction="always|withText" />
        <item
            android:id="@+id/actionInformation"
            android:enabled="true"
            android:icon="@drawable/icons8_create_30"
            android:title="@string/bottomInformation"
            app:showAsAction="always|withText" />
        <item
            android:id="@+id/actionSession"
            android:enabled="true"
            android:icon="@drawable/icons8_place_marker_30"
            android:title="@string/title_activity_sessions"
            app:showAsAction="always|withText" />
        <item
            android:id="@+id/actionStats"
            android:enabled="true"
            android:icon="@drawable/icons8_combo_chart_30"
            android:iconTint="@color/grey"
            android:iconTintMode="add"
            android:title="@string/title_stats"
            app:showAsAction="always|withText"/>
</menu>