...
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/white">

            <Button
                android:id ="@+id/button_start"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:background="@drawable/rounded_button"
                android:padding="15dp"
                android:gravity="center"
                android:onClick="onClickStart"
                android:tag="green"
                android:text="@string/start"
                android:textAppearance="@style/TextAppearance.AppCompat"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="540dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
...
