...
    <string name="info_orch_map_remLast">Remove Last Point</string>
    <string name="info_orch_map_permissionDialog_message">We would like access to your location so that you can find yourself on the map, making the orchard easier to find. It\'s alright if you don\'t want to give it to us, you\'ll just need to find the orchard from scratch!</string>
    <string name="info_orch_map_permissionDialog_title">Location Permission</string>
    <string name="info_orch_map_permissionDialog_okay">Continue</string>
    <string name="info_orch_map_locTitle">Location Information</string>
    <string name="info_orch_map_locMes">Your Location Information seems to be disabled, would you like to enable it so you can find yourself on the map?</string>
    <string name="info_orch_map_locYes">Yes</string>
    <string name="info_orch_map_locNo">No</string>
    <string name="info_orch_map_locNever">Do Not Ask Again</string>

    <!--Strings related to Information on Workers-->
    <string name="info_work_fName">Worker Name:</string>
    <string name="info_work_sName">Worker Surname:</string>
    <string name="info_work_id">ID Number:</string>
...
