...
                    android:textStyle="normal"
                    android:textSize="30dp"
                    android:gravity="center_horizontal"
                    android:text="0" />

                <Button
                    android:id="@+id/btnPlus"
                    style="@style/Base.Widget.AppCompat.ButtonBar"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="+"
...
